--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,12 +3,14 @@
 @import "./base/typography.scss";
 @import "./base/grid.scss";
 @import "./base/mixin.scss";
+@import "./base/ui.scss";
 
 /* layout */
 @import "./layout/inc-header.scss";
 @import "./layout/inc-footer.scss";
 
 /* pages */
+@import "preloader";
 @import "index";
 
 * {
@@ -32,10 +34,10 @@ body {
   min-height: 100%;
   font-family: $baseFont;
   font-weight: 400;
-  font-size: rem(16px);
+  font-size: 16px;
   line-height: 1.42;
   color: #000;
-  background-color: #fff;
+  background-color: #3960ac;
 }
 
 #wrapper {
