--- a/src/scss/_preloader.scss
+++ b/src/scss/_preloader.scss
@@ -22,67 +22,46 @@
   transform: translate(-50%, -50%);
   max-width: 500px;
   width: 100%;
+  opacity: 0;
+
+
+  &.loaded {
+    transition: .2s;
+    opacity: 1;
+  }
 }
 
-.linear-loader {
-    overflow: hidden;
-    max-width: 500px;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 4px;
-    background-color: rgba(255, 255, 255, 0.2);
-    position:relative;
-
-    div:nth-child(1) {
-      position:absolute;
-      left:0;transform:translateX(-100%);
-      height:100%;
-      width:30%;
-      background-color:#fafafa;
-      animation:anim1 3s cubic-bezier(.49,.7,.7,.35) infinite,anim2 2s ease-in-out infinite;
-    }
-
-    div:nth-child(2) {
-      content:'';
-      left:0;transform:translateX(-100%);
-      position:absolute;
-      height:100%;
-      width:30%;
-      background-color:#fafafa;
-      animation:anim1 3s cubic-bezier(.49,.7,.7,.35) infinite,anim2 3.5s ease-in-out infinite;
-      animation-delay:1.3s;
-    }
+.progressbar {
+  position: relative;
+  // margin-top: 1rem;
+  height: 4px;
+  max-width: 500px;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #b3b3b3;
 }
 
-@keyframes anim1 {
+.progressbar::after {
+  content: "";
+  width: 50%;
+  height: 4px;
+  background: #0078d4;
+  display: block;
+  border-radius: 0.5rem;
+  animation: animation 1.5s cubic-bezier(0.65, 0.05, 0.36, 1) infinite;
+}
+
+
+@keyframes animation {
   0% {
-    left:0;
-    transform:translateX(-100%)
+      transform: translateX(0%);
   }
-
-  55% {
-    left:100%;
-    transform:translateX(0%)
-  }
-
-  100% {
-    left:100%;
-    transform:translateX(0%)
-  }
-}
-
-@keyframes anim2 {
-  0% {
-    width:30%
-  }
-
   50% {
-    width:70%
+      transform: translateX(100%);
   }
-
   100% {
-    width:30%
+      transform: translateX(0%);
   }
 }
